<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".MainActivity">

    <LinearLayout
        android:weightSum="3"
        android:orientation="vertical"
        android:id="@+id/layoutManHinh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@android:color/holo_orange_dark"
        tools:ignore="MissingConstraints">

        <EditText
            android:layout_marginLeft="16dp"
            android:gravity="center|left"
            android:layout_weight="1"
            android:textSize="40dp"
            android:inputType="text"
            android:id="@+id/edtNhap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            />
        <TextView
            android:layout_marginRight="16dp"
            android:gravity="center|right"
            android:layout_weight="2"
            android:textSize="30dp"
            android:textStyle="bold"
            android:id="@+id/txtKetQua"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="123456"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#ffff66"
        android:orientation="horizontal"
        android:weightSum="4">

        <LinearLayout
            android:weightSum="4"
            android:id="@+id/layoutSo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ff66a3"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_weight="1"
                android:id="@+id/layout789"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#99ffff">

                <Button
                    android:layout_weight="1"
                    android:id="@+id/btn7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/_7"
                    tools:ignore="MissingConstraints" />

                <Button
                    android:layout_weight="1"
                    android:id="@+id/btn8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/_8"
                    tools:ignore="MissingConstraints" />

                <Button
                    android:layout_weight="1"
                    android:id="@+id/btn9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/_9"
                    tools:ignore="MissingConstraints" />


            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:id="@+id/layout456"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3"
                >

                <Button
                    android:layout_weight="1"
                    android:id="@+id/btn4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/_4"
                    tools:ignore="MissingConstraints" />

                <Button
                    android:layout_weight="1"
                    android:id="@+id/btn5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/_5"
                    tools:ignore="MissingConstraints" />

                <Button
                    android:layout_weight="1"
                    android:id="@+id/btn6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/_6"
                    tools:ignore="MissingConstraints" />


            </LinearLayout>

            <LinearLayout

                android:layout_weight="1"
                android:id="@+id/layout123"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3"
                >

                <Button
                    android:layout_weight="1"
                    android:id="@+id/btn1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:text="@string/_1"
                    tools:ignore="MissingConstraints" />

                <Button
                    android:layout_weight="1"
                    android:id="@+id/btn2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@+id/btn1"
                    android:text="@string/_2"
                    tools:ignore="MissingConstraints" />

                <Button
                    android:layout_weight="1"
                    android:id="@+id/btn3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@+id/btn2"
                    android:text="@string/_3"
                    tools:ignore="MissingConstraints" />

            </LinearLayout
                >

            <LinearLayout
                android:layout_weight="1"
                android:id="@+id/layoutcham0bang"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3"
                >


                <Button
                    android:layout_weight="1"
                    android:id="@+id/btnCham"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/btncham"
                    tools:ignore="MissingConstraints" />

                <Button
                    android:layout_weight="1"
                    android:id="@+id/btn0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/_0"
                    tools:ignore="MissingConstraints" />

                <Button
                    android:layout_weight="1"
                    android:id="@+id/btnBang"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/btnBang"
                    tools:ignore="MissingConstraints" />

            </LinearLayout>

        </LinearLayout>

                <LinearLayout
                    android:weightSum="5"
                    android:id="@+id/layoutPhepTinh"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <Button
                        android:layout_weight="1"
                        android:id="@+id/btnDel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Del"
                        tools:ignore="MissingConstraints" />

                    <Button
                        android:layout_weight="1"
                        android:id="@+id/btnChia"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/btnChia"
                        tools:ignore="MissingConstraints" />

                    <Button
                        android:layout_weight="1"
                        android:id="@+id/btnNhan"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/btnNhan"
                        tools:ignore="MissingConstraints" />

                    <Button
                        android:layout_weight="1"
                        android:id="@+id/btnTru"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/btnTru"
                        tools:ignore="MissingConstraints" />

                    <Button
                        android:layout_weight="1"
                        android:id="@+id/btnCong"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/btnCong"
                        tools:ignore="MissingConstraints" />

                </LinearLayout>

            </LinearLayout>

    </LinearLayout>
